# moto2000

./: .clang-format  .gitignore  .pre-commit-config.yaml  .swift-format  .swiftlint.yml  README.md  scram-display-prd.md  scram_round_display_mockups.html  scram_round_display_mockups_extra.html
.github/workflows/: commits.yml  firmware.yml  ios.yml
app/ios/: .env.tuist.example  .gitignore  Project.swift  ScramScreen.entitlements  Tuist.swift
app/ios/Sources/: AccessoryManager.swift  AppInfo.swift  CalendarSelectionSheet.swift  ConnectionViewModel.swift  FahrtenView.swift  HomeView.swift  MainTabView.swift  MaintenanceView.swift  MehrView.swift  (+15 more)
docs/: background-ble.md  ble-protocol.md  contributing.md  ios-app-prd.md  night-mode.md  ota.md  platform-limits.md  prd.md  scenarios.md  scenarios.schema.json  testing-from-home.md
docs/adr/: 0001-esp-idf-over-arduino.md  0002-tuist-and-swiftpm.md  0003-lvgl-v9.md  0004-test-strategy.md  0005-ios-18-minimum.md
hardware/firmware/: .cppcheck-suppressions  CMakeLists.txt  partitions.csv  sdkconfig.defaults
hardware/firmware/components/ams_client/: CMakeLists.txt
hardware/firmware/components/ams_client/include/: ams_client.h  ams_parser.h
hardware/firmware/components/ams_client/src/: ams_client.c  ams_parser.c
hardware/firmware/components/ancs_client/: CMakeLists.txt
hardware/firmware/components/ancs_client/include/: ancs_client.h  ancs_parser.h
hardware/firmware/components/ancs_client/src/: ancs_client.c  ancs_parser.c
hardware/firmware/components/ble_protocol/: CMakeLists.txt
hardware/firmware/components/ble_protocol/include/: ble_protocol.h
hardware/firmware/components/ble_protocol/src/: ble_protocol.c  ble_protocol_altitude.c  ble_protocol_appointment.c  ble_protocol_blitzer.c  ble_protocol_call.c  ble_protocol_clock.c  ble_protocol_compass.c  ble_protocol_control.c  ble_protocol_fuel.c  ble_protocol_internal.h  ble_protocol_lean_angle.c  ble_protocol_music.c  ble_protocol_nav.c  ble_protocol_speed_heading.c  ble_protocol_status.c  ble_protocol_trip_stats.c  ble_protocol_weather.c
hardware/firmware/components/ble_reconnect/: CMakeLists.txt
hardware/firmware/components/ble_reconnect/include/: ble_reconnect.h
hardware/firmware/components/ble_reconnect/src/: ble_reconnect.c
hardware/firmware/components/ble_server/: CMakeLists.txt
hardware/firmware/components/ble_server/include/: ble_server.h  ble_server_handlers.h
hardware/firmware/components/ble_server/src/: ble_server.c  ble_server_handlers.c  ble_server_handlers.h
hardware/firmware/components/display/: CMakeLists.txt  README.md
hardware/firmware/components/display/include/: display.h
hardware/firmware/components/display/src/: display_common.c  display_common.h  display_stub.c  display_waveshare.c  display_waveshare.h
hardware/firmware/components/ota_fsm/: CMakeLists.txt
hardware/firmware/components/ota_fsm/include/: ota_fsm.h  ota_verify.h  ota_version.h
hardware/firmware/components/ota_fsm/src/: ota_fsm.c  ota_verify.c  ota_version.c
hardware/firmware/components/screen_order/: CMakeLists.txt
hardware/firmware/components/screen_order/include/: screen_order.h
hardware/firmware/components/screen_order/src/: screen_order.c
hardware/firmware/host-sim/: CMakeLists.txt  README.md
hardware/firmware/host-sim/cmake/: run_snapshot_test.cmake
hardware/firmware/host-sim/include/host_sim/: appointment_layout.h  music_layout.h  navigation_layout.h  renderer.h  speed_layout.h  time_format.h  trip_stats_layout.h
hardware/firmware/host-sim/src/: altitude_layout.c  altitude_layout.h  appointment_layout.c  blitzer_layout.c  blitzer_layout.h  call_layout.c  call_layout.h  compass_layout.c  compass_layout.h  font8x8.h  fuel_layout.c  fuel_layout.h  lean_angle_layout.c  lean_angle_layout.h  main.c  music_layout.c  navigation_layout.c  png_writer.c  renderer.c  screen_altitude.c  screen_appointment.c  screen_blitzer.c  screen_call.c  screen_clock.c  screen_compass.c  screen_fuel.c  screen_lean_angle.c  screen_music.c  screen_navigation.c  screen_placeholder.c  screen_speed.c  screen_trip_stats.c  screen_weather.c  speed_layout.c  stb_impl.c  text_draw.c  text_draw.h  time_format.c  trip_stats_layout.c  weather_layout.c  (+1 more)
hardware/firmware/host-sim/tests/: snapshot_diff.c  test_altitude_layout.c  test_appointment_layout.c  test_blitzer_layout.c  test_call_layout.c  test_compass_layout.c  test_fuel_layout.c  test_lean_angle_layout.c  test_music_layout.c  test_navigation_layout.c  test_speed_layout.c  test_time_format.c  test_trip_stats_layout.c  test_weather_layout.c
hardware/firmware/host-sim/tools/: snapshot-update.sh
hardware/firmware/lvgl-sim/: CMakeLists.txt  README.md  lv_conf.h  main.c
hardware/firmware/lvgl-sim/common/: screen_manager.c  screen_manager.h
hardware/firmware/lvgl-sim/fonts/: README.md
hardware/firmware/lvgl-sim/screens/: screen_altitude.c  screen_altitude.h  screen_blitzer.c  screen_blitzer.h  screen_calendar.c  screen_calendar.h  screen_call.c  screen_call.h  screen_clock.c  screen_clock.h  screen_compass.c  screen_compass.h  screen_fuel.c  screen_fuel.h  screen_lean_angle.c  screen_lean_angle.h  screen_music.c  screen_music.h  screen_navigation.c  screen_navigation.h  screen_placeholder.c  screen_placeholder.h  screen_speed.c  screen_speed.h  screen_trip_stats.c  screen_trip_stats.h  screen_weather.c  screen_weather.h
hardware/firmware/lvgl-sim/theme/: scram_colors.h  scram_fonts.h  scram_theme.c  scram_theme.h
hardware/firmware/main/: CMakeLists.txt  README.md  idf_component.yml  scramscreen_main.c
hardware/firmware/test/host/: CMakeLists.txt  fixture_e2e.c  fixture_e2e.h  test_ams_parser.c  test_ancs_parser.c  test_ble_protocol.c  test_ble_reconnect.c  test_ble_server_handlers.c  test_capacity.c  test_display_stub.c  test_fixture_e2e.c  test_integration.c  test_ota_fsm.c  test_payload_cache.c  test_screen_fsm.c  test_screen_order.c  test_smoke.c
protocol/fixtures/: README.md  generate.py
tools/fetch-speed-cameras/: README.md  fetch_speed_cameras.py
tools/scenario-to-video/: Package.swift  README.md
(+145 files in other folders)
